--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monser",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Mamata.github.io/new_monster",
+  "homepage": "https://github.com/Mamata890/new_monster",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -12,13 +12,14 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+  "scripts": { 
+     "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+  
   },
   "eslintConfig": {
     "extends": "react-app"
