--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monser",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Mamata890/new_monster",
+  "homepage": "https://Mamata890.github.io/new_monster",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
