--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monser",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Mamata890.github.io/new_monster",
+  "homepage": "https://mamata890.github.io/new_monster/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -18,7 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   
   },
   "eslintConfig": {
